--- a/Hackathon/src/components/character-list/card/Card.css
+++ b/Hackathon/src/components/character-list/card/Card.css
@@ -60,7 +60,7 @@
   background-color: var(--yellow);
 }
 
-@media (max-width: 480px) {
+@media (max-width: 512px) {
   .character-list__grid__card {
     padding: 10px;
     width: 250px;
