--- a/Hackathon/src/components/mobile-bar/MobileBar.css
+++ b/Hackathon/src/components/mobile-bar/MobileBar.css
@@ -5,25 +5,25 @@
   left: 0px;
   background-color: var(--yellow);
   width: 100%;
-  height: 50px;
-  justify-content: center;
-  align-items: center;
+  height: 56px;
 }
 
 .mobile-bar__btn {
   background: transparent;
   border: none;
-  transform: translateX(-50%);
   cursor: pointer;
   z-index: 10;
 }
 
-.mobile-bar__btn:hover {
+.mobile-bar__btn i {
+  font-size: 2.5rem;
   color: var(--white);
 }
 
-@media (max-width: 480px) {
+@media (max-width: 512px) {
   .mobile-bar {
     display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
